# tutorials

./: flake.nix  pyproject.toml
real_estate/: __manifest__.py
real_estate/models/: __init__.py  estate_property.py
